[Issue-274] Fixed PR Comments